image spacing fix

--- a/web/scss/_blog.scss
+++ b/web/scss/_blog.scss
@@ -21,6 +21,10 @@
   {
     @include anchor($color-primary);
   }
+  img + p
+  {
+    margin-top: $spacing-vertical;
+  }
 }
 .post-author-spotlight
 {
